# CO2_forecast_EU

./: data_manifest.yaml  download_data.py  pyproject.toml  requirements.txt  run_replication.py  setup_environment.py
Scripts/: utils.py
Scripts/Elements/: Datasets.py  Models.py
Scripts/Training/: CO2_predictor_training.py  VAE_training.py  latent_forecaster_training.py
config/data/: output_configs.py  variable_selection.txt
config/models/: VAE_config.yaml  co2_predictor_config.yaml  latent_forecaster_config.yaml
replication/: data_manifest.yaml  download_data.py  replicate.sh  run_replication.py
scripts/: utils.py
scripts/analysis/: common.py  cross_validation_comparison.py  generate_projections.py  perturbation_analysis.py  sensitivity_analysis.py  sensitivity_perturbation.py  sobol_analysis.py
scripts/elements/: datasets.py  models.py
scripts/inference/: generate_projections.py
scripts/preprocessing/: preprocess_historical.R  preprocess_projections
scripts/training/: train_forecaster.py  train_predictor.py  train_vae.py
scripts/visualization/: figure_attribution_panels.py  figure_emissions_gap.py  figure_sectoral_changes.py  figure_sensitivity_heatmap.py  plot_emissions_gap.py  visualise_latent_space.py
scripts/visualization/interactive/: interactive_plot.py
